--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,10 @@ SYNTH_API_KEY=
 # For users who have other applications listening at 3000, this allows them to set a value puma will listen to.
 PORT=3000
 
+# OpenAI Configuration
+OPENAI_ACCESS_TOKEN=
+# OPENAI_BASE_URL= # Example: http://localhost:8080/v1
+
 # SMTP Configuration
 # This is only needed if you intend on sending emails from your Maybe instance (such as for password resets or email financial reports).
 # Resend.com is a good option that offers a free tier for sending emails.
