--- a/compose.example.yml
+++ b/compose.example.yml
@@ -42,8 +42,8 @@ x-rails-env: &rails_env
   DB_PORT: 5432
   REDIS_URL: redis://redis:6379/1
 # NOTE: enabling OpenAI will incur costs when you use AI-related features in the app (chat, rules).  Make sure you have set appropriate spend limits on your account before adding this.
-  OPENAI_ACCESS_TOKEN: ${OPENAI_ACCESS_TOKEN}
-
+        OPENAI_ACCESS_TOKEN: ${OPENAI_ACCESS_TOKEN}
+        OPENAI_BASE_URL: ${OPENAI_BASE_URL}
 services:
   web:
     image: ghcr.io/maybe-finance/maybe:latest
